--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,11 @@
 .CSVImporter-dialog {
 	position: relative !important;
 }
+
+animation: var(--animate-spin); /* spin 1s linear infinite */
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
